# nomade-care-api

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
controllers/: audio_controller.py
dto/: audio_dto.py
output/: emotion_report.json
routers/: audio_router.py
services/: emotion_service.py  llm_service.py
src/: main.py
