[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.14.0",
    "requests>=2.32.5",
    "transformers>=4.30.0",
    "speechbrain",
    "torch",
    "torchaudio",
    "scikit-learn",
    "matplotlib",
    "datasets",
    "librosa",
    "torchcodec>=0.8.1",
    "accelerate>=1.11.0",
    "funasr>=1.2.7",
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    "fastapi>=0.121.0",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=3.0.3",
    "ollama>=0.3.0",
]
